# catan

./: .gitignore
catan-ai-agent/: Hand_Off_README.md  MCTS_PHASE_README.md  MODEL_ARCHITECTURE_README.md  Phase1_README.md  Phase2_MCTS_README.md  README.md  pyproject.toml
catan-ai-agent/reports/: DEMO_RUNBOOK.md  _audit_tmp_checkpoint.pt  human_eval_instructions.md  human_survey_template.md  mini_neural_experiment_summary.json  neural_phase_audit.json  neural_phase_audit.md  simulator_notes_template.md
catan-ai-agent/scripts/: analyze_ablation.py  audit_neural_phase.py  build_final_results_bundle.py  check_human_eval_status.py  cli_smoke.py  demo_preflight.py  final_audit.py  final_audit_core.py  final_audit_figures.py  finalize_human_eval_session.py  generate_paper_figures.py  prepare_human_eval.py  public_state_probe.py  regenerate_latex_tables.py  reproduce_final_artifacts.py  run_ablation_study.py  run_belief_mcts_match.py  run_browser_human_vs_bot.py  run_debug_match.py  run_final_demo.py  run_heuristic_match.py  run_mcts_match.py  run_mini_neural_experiment.py  run_neural_mcts_match.py  run_neural_scaling_study.py  run_opponent_modeling_ablation.py  run_opponent_modeling_sweep.py  run_priors_vs_full.py  run_self_play.py  run_v3_combined.py  run_visual_match.py  sim_probe.py  start_human_eval_session.py  state_probe.py  summarize_human_eval.py  train_policy_value.py
catan-ai-agent/tests/: test_action_codec.py  test_belief_mcts.py  test_debug_player.py  test_demo_operator_flow.py  test_final_results_bundle.py  test_heuristic_player.py  test_human_eval.py  (+10 more)
(+148 files in other folders)
