[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catan-ai"
version = "0.1.0"
description = "AI agent wrapper layer for the Catanatron game engine"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
]
ml = [
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
